kolejna walka z cieniem i ItemMeta